TMRR tool proposal

--- a/tools.html
+++ b/tools.html
@@ -111,6 +111,8 @@ LibreTorrent</a>&nbsp;(for Android)</h3>
 <p>Provide real-time information about the number of seeds and peers on torrents</p>
 <h3><a href="http://torrenteditor.com/" target="_blank" rel="noopener">Torrent Editor</a></h3>
 <p>Helps to edit torrent trackers</p>
+<h3><a href="http://github.com/kovalensky/tmrr" target="_blank" rel="noopener">TMRR</a></h3>
+<p>A standalone command-line tool for extracting, comparing and calculating file hashes for .torrent files, compatible with the BitTorrent v2 protocol.</p>
 <h3><a href="https://yutzuko-torrent.appspot.com/" target="_blank" rel="noopener">Batch Torrent Editor</a></h3>
 <p>Online tool to edit torrent files</p>
 <h3><a href="http://magnet2torrent.com/" target="_blank" rel="noopener">Magnet2Torrent</a></h3>
